--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=connect123!@#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+
+
+--json설정
+spring.jackson.property-naming-strategy=SNAKE_CASE
